--- a/css/colostle.css
+++ b/css/colostle.css
@@ -269,18 +269,20 @@
   flex: 1;
 }
 
-.colostle .sheet-header h1.charname {
+.colostle .sheet-header h1.charname, .colostle .sheet-header h1.classType {
   height: 50px;
   padding: 0px;
   margin: 5px 0;
   border-bottom: 0;
 }
 
-.colostle .sheet-header h1.charname input {
+.colostle .sheet-header h1.charname input, .colostle .sheet-header h1.classType input {
   width: 100%;
   height: 100%;
   margin: 0;
 }
+
+.colostle .sheet-header h1.classType
 
 .colostle .sheet-tabs {
   -webkit-box-flex: 0;
